deploy/k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: nginx
          image: urielmt343/cloudcinema-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
